@@ -24,19 +24,37 @@ A <strong>JavaFX</strong> implementation of the classic Minesweeper game with a 
 
 This project has been developed and tested with the following technologies:
 
-- [Java](https://www.java.com/en/) :: Oracle Java™ Language | OpenJDK JRE 61.0
-- [JavaFX](https://openjfx.io/) :: JavaFX Framework | OpenJFX SDK 17.0.2
+- [Java](https://www.java.com/en/) :: Oracle Java™ Language | OpenJDK JRE
+- [JavaFX](https://openjfx.io/) :: JavaFX Framework | OpenJFX SDK
 - [...Work in progress]()
 
 ## ⤵ Setup
 
 These instructions will take you to a copy of the project running on your local machine for testing and development purposes.
 
-**Note:** 
-
 ```bash
-- git clone https://github.com/magujun/javafx-minepark.git
-- cd javafx-minepark
+    - git clone https://github.com/magujun/javafx-minepark.git
+    - cd javafx-minepark
+    - sudo apt-get install unzip
+    - mkdir tmp/
+    - mkdir bin/
+```    
+
+**Note:** You will need to download the javaFX libs to run the application.
+The following commands apply to a Linux x86_64 environment.
+
+```    
+    - curl -L https://download2.gluonhq.com/openjfx/18/openjfx-18_linux-x64_bin-sdk.zip > tmp/openjfx-18_linux-x64_bin-sdk.zip
+    - unzip tmp/openjfx-18_linux-x64_bin-sdk.zip -d tmp/
+ ```
+ *For other platforms, please check [openJFX.io](https://gluonhq.com/products/javafx/) and download the openjfx SDK for your system.*
+ 
+ **Compile**
+ ```   
+    - javac -d bin --module-path tmp/javafx-sdk-18/lib --add-modules=javafx.controls,javafx.media,javafx.graphics -classpath bin:tmp/javafx-sdk-18/lib/javafx-swt.jar:tmp/javafx-sdk-18/lib/javafx.base.jar:tmp/javafx-sdk-18/lib/javafx.controls.jar:tmp/javafx-sdk-18/lib/javafx.graphics.jar:tmp/javafx-sdk-18/lib/javafx.media.jar:tmp/javafx-sdk-18/lib/javafx.swing.jar:tmp/javafx-sdk-18/lib/javafx.web.jar src/*
+```
+**Run**
+```- java --module-path tmp/javafx-sdk-18/lib --add-modules=javafx.controls,javafx.media,javafx.graphics -classpath bin:tmp/javafx-sdk-18/lib/javafx-swt.jar:tmp/javafx-sdk-18/lib/javafx.base.jar:tmp/javafx-sdk-18/lib/javafx.controls.jar:tmp/javafx-sdk-18/lib/javafx.graphics.jar:tmp/javafx-sdk-18/lib/javafx.media.jar:tmp/javafx-sdk-18/lib/javafx.swing.jar:tmp/javafx-sdk-18/lib/javafx.web.jar Minepark
 ```
 
 ## 🎓 Who taught?
